<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/add_to_cart_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                android:elevation="4dp"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.android.groceryproject.AddToCartActivity">

            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/add_cart_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/checkoutLayout">

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/empty_cart_layout"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/your_cart_is_empty"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="12dp"
                    android:text="@string/add_items_to_it_now" />

                <Button
                    android:id="@+id/start_shopping_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:padding="10dp"
                    android:text="@string/start_shopping"
                    android:textColor="@color/white" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/checkoutLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:visibility="gone"
                android:focusable="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_background">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="0.5"
                    android:text="@string/checkout"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:id="@+id/textView" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_arrow_forward"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/_0_0"
                    android:textSize="16sp"
                    android:layout_marginRight="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                     />

            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

