<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homepage_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/homefragment_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/home_Scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="@null"
                app:cardElevation="0dp">

                <com.lsjwzh.widget.recyclerviewpager.LoopRecyclerViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    app:rvp_singlePageFling="true" />


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="@null"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:padding="6dp"
                        android:text="Shop by Category"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycle_list2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/category_expand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_apps" />

                        <TextView
                            android:id="@+id/category_expand_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more_categories"
                            android:textColor="@color/colorAccent"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="@null"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="6dp"
                            android:padding="6dp"
                            android:text="@string/heading1"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/view_all_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"

                            android:gravity="center"
                            android:paddingBottom="4dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:paddingTop="4dp"
                            android:text="@string/more"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="?android:attr/listDivider" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycle_list1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
